Fatal Assertion 16213 in fsync.js

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.2
    • Affects Version/s: None
    • Component/s: Concurrency
    • Environment:
      OS X 10.5 64-bit DUR OFF
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      dur_passthrough.js run jstests/fsync.js
       m30100| Wed May  9 15:13:11 [conn1] command denied: { fsync: 1.0, lock: 1.0 }
       m30100| Wed May  9 15:13:11 [conn1] CMD fsync: sync:1 lock:1
       m30100| Wed May  9 15:13:11 [fsyncLockWorker] removeJournalFiles
       m30100| Wed May  9 15:13:11 [conn1] db is now locked for snapshotting, no writes allowed. db.fsyncUnlock() to unlock
       m30100| Wed May  9 15:13:11 [conn1]     For more info see http://www.mongodb.org/display/DOCS/fsync+Command
       m30100| Wed May  9 15:13:11 [conn1] command: unlock requested
       m30100| Wed May  9 15:13:12 [conn1]   Fatal Assertion 16213
       m30100| 0x1000784cb 0x10042d5e5 0x1005c9a3d 0x100631664 0x100631716 0x1004f8d45 0x1004f9792 0x1003ed93c 0x1003edf1c 0x1003ee7e5 0x10046a21f 0x10046a460 0x10040718c 0x10040d9f7 0x10009b3b3 0x1001e2f2d 0x1006458b3 0x7fff8a34efd6 0x7fff8a34ee89 
       m30100|  0   mongod                              0x00000001000784cb _ZN5mongo15printStackTraceERSo + 43
       m30100|  1   mongod                              0x000000010042d5e5 _ZN5mongo13fassertFailedEi + 165
       m30100|  2   mongod                              0x00000001005c9a3d _ZN5mongo4Lock7DBWrite18UpgradeToExclusiveC2Ev + 381
       m30100|  3   mongod                              0x0000000100631664 _ZN5mongo3dur11DurableImpl16_aCommitIsNeededEv + 372
       m30100|  4   mongod                              0x0000000100631716 _ZN5mongo3dur11DurableImpl14commitIfNeededEb + 54
       m30100|  5   mongod                              0x00000001004f8d45 _ZN5mongo8MongoMMF5closeEv + 309
       m30100|  6   mongod                              0x00000001004f9792 _ZN5mongo8MongoMMFD2Ev + 34
       m30100|  7   mongod                              0x00000001003ed93c _ZN5mongo8Database16openExistingFileEi + 2028
       m30100|  8   mongod                              0x00000001003edf1c _ZN5mongo8DatabaseC2EPKcRbRKSs + 396
       m30100|  9   mongod                              0x00000001003ee7e5 _ZN5mongo14DatabaseHolder11getOrCreateERKSsS2_Rb + 1157
       m30100|  10  mongod                              0x000000010046a21f _ZN5mongo6Client7Context11_finishInitEb + 95
       m30100|  11  mongod                              0x000000010046a460 _ZN5mongo6Client7ContextC2ERKSsSsbb + 128
       m30100|  12  mongod                              0x000000010040718c _ZN5mongo14receivedInsertERNS_7MessageERNS_5CurOpE + 1564
       m30100|  13  mongod                              0x000000010040d9f7 _ZN5mongo16assembleResponseERNS_7MessageERNS_10DbResponseERKNS_11HostAndPortE + 3751
       m30100|  14  mongod                              0x000000010009b3b3 _ZN5mongo16MyMessageHandler7processERNS_7MessageEPNS_21AbstractMessagingPortEPNS_9LastErrorE + 291
       m30100|  15  mongod                              0x00000001001e2f2d _ZN5mongo3pms9threadRunEPNS_13MessagingPortE + 685
       m30100|  16  mongod                              0x00000001006458b3 thread_proxy + 163
       m30100|  17  libSystem.B.dylib                   0x00007fff8a34efd6 _pthread_start + 331
       m30100|  18  libSystem.B.dylib                   0x00007fff8a34ee89 thread_start + 13
       m30100| Wed May  9 15:13:12 [conn1] 
       m30100| 
       m30100| ***aborting after fassert() failure
       m30100| 
       m30100| 
       m30100| Wed May  9 15:13:12 Got signal: 6 (Abort trap).
       m30100| 
       m30100| Wed May  9 15:13:12 Backtrace:
       m30100| 0x1000784cb 0x1000858fb 0x7fff8a3761ba 0x60000 0x100086ccd 0x10008971f 0x100089d6d 0x100092512 0x100084f18 
       m30100|  0   mongod                              0x00000001000784cb _ZN5mongo15printStackTraceERSo + 43
       m30100|  1   mongod                              0x00000001000858fb _ZN5mongo10abruptQuitEi + 987
       m30100|  2   libSystem.B.dylib                   0x00007fff8a3761ba _sigtramp + 26
       m30100|  3   ???                                 0x0000000000060000 0x0 + 393216
       m30100|  4   mongod                              0x0000000100086ccd _ZN5mongo6listenEi + 477
       m30100|  5   mongod                              0x000000010008971f _ZN5mongo14_initAndListenEi + 1423
       m30100|  6   mongod                              0x0000000100089d6d _ZN5mongo13initAndListenEi + 29
       m30100|  7   mongod                              0x0000000100092512 main + 34210
       m30100|  8   mongod                              0x0000000100084f18 start + 52
       m30100| 
      Wed May  9 15:13:12 DBClientCursor::init call() failed
      Wed May  9 15:13:12 query failed : test.$cmd { getlasterror: 1.0 } to: 127.0.0.1:30100
      Error: error doing query: failed
      
      
      
      
      dur_passthrough.js FAIL
      dur_passthrough.js failed test : jstests/fsync.js
      

      http://buildbot.mongodb.org/builders/OS%20X%2010.5%2064-bit%20DUR%20OFF/builds/980/steps/test_1/logs/stdio

            Assignee:
            Andy Schwerin (Inactive)
            Reporter:
            Ian Whalen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: